# Kinal

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  README.zh-CN.md  SECURITY.md  VERSION  build_gui.py  x.py
.github/workflows/: ci.yml  docs-sync.yml  release-published.yml  release.yml
apps/kinal/: CMakeLists.txt
apps/kinal-lsp/server/: CMakeLists.txt
apps/kinal-lsp/server/src/: main.cpp
apps/kinal/include/kn/: ast.h  builtins.h  codegen.h  diag.h  format.h  knc.h  lexer.h  link.h  parser.h  profile.h  sema.h  source.h  std.h  util.h  version.h  version.h.in
apps/kinal/resources/: kinal.rc
apps/kinal/src/: kn_ast.c  kn_builtins.c  kn_codegen.c  kn_diag.c  kn_diag_registry.c  kn_driver.c  kn_format.c  kn_knc.c  kn_lexer.c  kn_link.c  kn_parser.c  kn_sema.c  kn_source.c  kn_std.c  kn_util.c
apps/kinal/src/codegen/: kn_codegen_decl.inc  kn_codegen_expr.inc  kn_codegen_runtime_stmt.inc  kn_codegen_support.inc
apps/kinal/src/driver/: kn_driver_cli.inc  kn_driver_compile.inc  kn_driver_pkg.inc  kn_driver_project.inc  kn_driver_support.inc
apps/kinal/src/link/: kn_link_impl.inc  kn_link_runtime.inc  kn_link_support.inc
apps/kinal/src/parser/: kn_parser_decl.inc  kn_parser_stmt.inc  kn_parser_type_expr.inc
apps/kinal/src/sema/: kn_sema_expr.inc  kn_sema_stmt.inc  kn_sema_validate.inc
apps/kinalvm/src/: Main.kn
dev/: architecture.md  build.md  releasing.md  testing.md
dev/zh-CN/: architecture.md  build.md  releasing.md  testing.md
docs/: index.md
docs/advanced/: compilation-pipeline.md  cross-compilation.md  freestanding.md  linking.md  runtime-environment-constants.md
docs/cli/: cli-spec.md  compiler.md  fmt.md  packages.md  vm.md
docs/getting-started/: hello-world.md  installation.md  project-structure.md
docs/language/: async.md  blocks.md  classes.md  control-flow.md  exceptions.md  ffi.md  functions.md  generics.md  interfaces.md  meta.md  modules.md  operators.md  overview.md  safety.md  strings.md  structs-enums.md  types.md  variables.md
docs/stdlib/: async.md  collections.md  console.md  filesystem.md  meta.md  overview.md  path.md  system.md  text.md  time.md
docs/zh-CN/: index.md
docs/zh-CN/advanced/: compilation-pipeline.md  cross-compilation.md  freestanding.md  linking.md  runtime-environment-constants.md
docs/zh-CN/cli/: cli-spec.md  compiler.md  fmt.md  packages.md  vm.md
docs/zh-CN/getting-started/: hello-world.md  installation.md  project-structure.md
docs/zh-CN/language/: async.md  blocks.md  classes.md  control-flow.md  exceptions.md  ffi.md  functions.md  generics.md  interfaces.md  meta.md  modules.md  operators.md  overview.md  safety.md  strings.md  structs-enums.md  types.md  variables.md
docs/zh-CN/stdlib/: async.md  collections.md  console.md  filesystem.md  meta.md  overview.md  path.md  system.md  text.md  time.md
infra/assets/locales/: zh-CN.json
infra/assets/locales.build-gui/: en-US.json  zh-CN.json
infra/assets/scripts/: install.sh
infra/cmake/: llvm-host-tools.cmake  llvm-minimal.cmake
infra/scripts/: build_gui.py  execute_refactor.py  fix_web_paths.py  generate_kinal_icon.py  kinal_gui.py  release_assets.py  release_feed.py  remote.py  superdocs.py
infra/scripts/x/: context.py  llvm.py  release_ops.py  runtime_build.py  selfhost_ops.py  third_party.py  util.py  zig.py
infra/toolchains/: setup_llvm.py  setup_zig.py
libs/runtime/: README.md
libs/runtime/src/: kn_chkstk.c  kn_json_cjson.c  kn_math.c  kn_platform_host.c  kn_runtime.c  kn_web_civet.c
libs/selfhost/: README.md  STATUS.md
libs/selfhost/examples/: LexDemo.fx  ParseMissingSemicolon.fx  ParseTryNoCatch.fx  SemaBadMainSig.fx  SemaMissingReturn.fx  (+3 more)
tests/: alias.kn  anon_event.kn  any_collections.kn  any_runtime_methods.kn  async_sleep.kn  attributes.kn  bitwise.kn  block_features.kn  block_hierarchy.kn  builtin_meta_attrs.kn  char_to_string.kn  class_null_compare.kn  ctor_named_function.kn  default_args.kn  dict.kn  dynlib_loader.kn  dynlib_shared.kn  error_any_isint_args.kn  error_attr_linklib_delegate.kn  error_attr_linkname_non_string.kn  error_block_not_function.kn  error_block_safe.kn  error_byte_overflow.kn  error_ctor_missing_match.kn  error_dict_tryfetch_key.kn  error_ffi_safe.kn  error_generic_missing_args.kn  error_get_alias_reversed.kn  error_get_position.kn  error_get_scope.kn  error_incomplete_block_body.kn  error_incomplete_class_body.kn  error_incomplete_interface_body.kn  error_incomplete_struct_body.kn  error_invalid_char_literal.kn  error_is_pattern_scope.kn  error_list_peek_args.kn  error_member_access_unknown_root.kn  error_member_chain_unknown_root.kn  error_meta_lowercase_keep.kn  (+75 more)
tests/autolink/: main.kn
tests/common/: alias.kn  any_cast.kn  any_collections.kn  any_runtime_methods.kn  array_const_len.kn  array_contextual.kn  array_index.kn  arrays.kn  async_call.kn  async_main.kn  async_process.kn  async_sleep.kn  attributes.kn  bitwise.kn  block_features.kn  block_hierarchy.kn  builtin_function_ref.kn  builtin_meta_attrs.kn  char_literals.kn  char_to_string.kn  collections_more.kn  console_varargs.kn  control.kn  ctor_implicit_default.kn  ctor_named_function.kn  default_args.kn  dict.kn  dict_literal.kn  dynlib_loader.kn  dynlib_shared.kn  error_any_isint_args.kn  error_attr_linklib_delegate.kn  error_attr_linkname_non_string.kn  error_attr_symbolname_extern.kn  error_attr_symbolname_kinal_delegate.kn  error_block_not_function.kn  error_block_safe.kn  error_byte_overflow.kn  error_catch_type.kn  error_char_ptr_concat_both.kn  (+139 more)
tests/ffi_native/: native_ffi.c  native_hosted_probe.c
tests/linux/: const_if.kn  path_posix.kn  system_exec.kn  target_platform.kn
tests/macos/: const_if.kn  path_posix.kn  system_exec.kn  target_platform.kn
tests/qual_module/: test.kn
tests/windows/: anon_event.kn  class_null_compare.kn  const_if.kn  extern_system.kn  ffi_attr_file.kn  ffi_attr_lib.kn  ffi_dll.kn  ffi_hosted_auto.kn  ffi_lib.kn  ffi_obj.kn  no_unit_local_class.kn  stdlib_ui.kn  stdlib_ui_alias_nested_new.kn  stdlib_ui_components.kn  stdlib_window.kn  system_exec.kn
(+65 files in other folders)
